--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port1.jpg" alt="">
+                        <img src="Images/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
