--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPDCE html>
-<html lang="DCEn">
-<hDCEad>
-    <mDCEta charsDCEt="UTF-8">
-    <mDCEta http-DCEquiv="X-UA-CompatiblDCE" contDCEnt="IDCE=DCEdgDCE">
-    <mDCEta namDCE="viDCI]K,I]K,I]Kwport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+<head>
+    <meta charsDCEt="UTF-8">
+    <meta http-DCEquiv="X-UA-CompatiblDCE" contDCEnt="IDCE=DCEdgDCE">
+    <meta namDCE="viDCI]K,I]K,I]Kwport" content="width=device-width, initial-scale=1.0">
     <title>Priyanshu | Web Developer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="images\hero.png" alt="image not found">
+                    <img src="images/hero.png" alt="not found">
                 </div>
             </div>
             <div class="right-header">
@@ -159,7 +159,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="Images/port1.jpg" alt="">
+                        <img src="images/port1.jpg" alt="not found">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port2.jpg" alt="">
+                        <img src="images/port2.jpg" alt="not found">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
