--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port1.jpg" alt="not found">
+                        <img src="port1.jpg" alt="not found">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -178,7 +178,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port2.jpg" alt="not found">
+                        <img src="port2.jpg" alt="not found">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port3.jpg" alt="">
+                        <img src="port3.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port4.jpg" alt="">
+                        <img src="port4.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port5.jpg" alt="">
+                        <img src="port5.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -254,7 +254,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port2.jpg" alt="">
+                        <img src="port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -273,7 +273,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="images/port7.jpg" alt="">
+                        <img src="port7.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -311,7 +311,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="images/blog1.jpg" alt="">
+                        <img src="blog1.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 How to Become an Expert in Web Design
@@ -323,7 +323,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="images/blog2.jpg" alt="">
+                        <img src="blog2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Become a Web Designer in 10 Days
@@ -335,7 +335,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="images/blog3.jpg" alt="">
+                        <img src="blog3.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Debbuging made easy with Web Inspector
@@ -347,7 +347,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="images/port1.jpg" alt="">
+                        <img src="port1.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Get started with Web Design and UI Design
@@ -359,7 +359,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="images/port3.jpg" alt="">
+                        <img src="port3.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 This is what you need to know about Web Design
