--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 </div>
                 <div class="blogs">
                     <div class="blog">
-                        <img src="images/port6.jpg" alt="">
+                        <img src="port6.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 How to Create Your Own Website
