--- a/index.html
+++ b/index.html
@@ -493,6 +493,13 @@
     <div class="theme-btn">
         <i class="fas fa-adjust"></i>
     </div>
+    
+        <div class="counter-container">
+        <i class="fab fab fa-instagram fa-3x"></i>
+        <div class="counter" data-target="500"></div>
+        <span> Visitors on the site </span>
+    </div>
+    
     <script src="app.js"></script>
 </body>
 </html>
