--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 </div>
             </div>
         </div>
+        <div class="counter-container">
+            <div class="counter" data-target="500"></div>
+            <span> Visitors on this site </span>
+        </div>
     </header>
     <main>
         <section class="container about" id="about">
