--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="/images/hero.png" alt="not found">
+                    <img src="/Images/hero.png" alt="not found">
                 </div>
             </div>
             <div class="right-header">
