--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Solano Milan Diaz.</span>
+                    Hi, I'm <span>Priyanshu Tomar.</span>
                     A Web Developer.
                 </h1>
                 <p>
                     I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    I work as a freelancer for different clients form different parts of the world. 
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
@@ -48,13 +47,9 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                        vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                        delectus dolore fugiat exercitationem a, 
-                        ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Harum non necessitatibus deleniti eum soluta.
+                    I'm a Web Developer, I love to create beautiful and functional websites.
+                    I work as a freelancer for different clients form different parts of the world.accusamus labore dolores nam. Unde.
+                    I work on my different personal projects related to different technology. Also working on the blockchai tecnology. 
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -66,25 +61,25 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">650+</p>
+                            <p class="large-text">20+</p>
                             <p class="small-text">Projects <br /> Completed</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">10+</p>
+                            <p class="large-text">2+</p>
                             <p class="small-text">Years of <br /> experience</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">300+</p>
+                            <p class="large-text">30+</p>
                             <p class="small-text">Happy <br /> Clients</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">400+</p>
+                            <p class="large-text">25+</p>
                             <p class="small-text">Customer <br /> reviews</p>
                         </div>
                     </div>
@@ -138,13 +133,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="progress-bar">
-                        <p class="prog-title">Python</p>
-                        <div class="progress-con">
-                            <p class="prog-text">70%</p>
-                            <div class="progress">
-                                <span class="python"></span>
-                            </div>
+  
                         </div>
                     </div>
                 </div>
@@ -156,9 +145,9 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2010 - present</p>
-                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <h5>Web Developer <a href="/consoul/index.html" Target="_blank"> <span> - consoult </span> </a> </h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        A website created for my client recently for digital marketing consultancy. 
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -223,7 +212,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="/Images/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -242,7 +231,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="/Images/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -261,7 +250,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="/Images/port3.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -280,7 +269,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port4.jpg" alt="">
+                        <img src="/Images/port4.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -299,7 +288,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port5.jpg" alt="">
+                        <img src="/Images/port5.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -318,7 +307,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="/Images/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -337,7 +326,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port7.jpg" alt="">
+                        <img src="/Images/port7.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -363,7 +352,7 @@
                 </div>
                 <div class="blogs">
                     <div class="blog">
-                        <img src="img/port6.jpg" alt="">
+                        <img src="/Images/port6.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 How to Create Your Own Website
@@ -375,7 +364,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog1.jpg" alt="">
+                        <img src="/Images/blog1.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 How to Become an Expert in Web Design
@@ -387,7 +376,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog2.jpg" alt="">
+                        <img src="/Images/blog2.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Become a Web Designer in 10 Days
@@ -399,7 +388,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog3.jpg" alt="">
+                        <img src="/Images/blog3.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Debbuging made easy with Web Inspector
@@ -411,7 +400,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="/Images/port1.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Get started with Web Design and UI Design
@@ -423,7 +412,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="/Images/port3.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 This is what you need to know about Web Design
@@ -456,7 +445,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                    : Uttar Pradesh, India
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -465,7 +454,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span>: priyanshut10902@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -474,7 +463,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span>: R. D. Engineering College, Ghaziabad (Ongoing)</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -483,7 +472,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: 07522670617</span>
+                                    <span>: 0758548238</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -492,7 +481,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span>: Hindi, English</span>
                                 </p>
                             </div>
                         </div>
