--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     I work as a freelancer for different clients form different parts of the world. 
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="/PRIYANSHU TOMAR RESUME.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
